First shot at an immutable user object
Signed-off-by: Nils Bandener <nils.bandener@eliatra.com>